<resources>
    <string name="app_name">LMSLawyer</string>
    <string name="API_KEY">AIzaSyCe2ZuL3XQ-uGv_yXCrrNXfrDpY95Rqoug</string>
    <string name="font_roboto">Roboto-Regular.ttf</string>
    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signup">Sign up</string>
    <string name="forgot_pass_heading">FORGOT PASSWORD</string>
    <string name="enter_email">Enter your email address</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="reset_pass">To reset your password, please enter the email address you provided in the sign up process</string>
    <string name="email_add">Email Address</string>
    <string name="news_feeds">Newsfeeds</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="lawyer_type">Type of Lawyer</string>
    <string name="case_type">Type of Case</string>
    <string name="budget">Budget</string>
    <string name="best">Best</string>
    <string name="medium">Medium</string>
    <string name="newly">Newly Experienced</string>
    <string name="notification">Notifications</string>
    <string name="filter_category">Filter by Category</string>
    <string name="news_feed_heading">NEWSFEED</string>
    <string name="search">Do you have any Legal Questions?</string>
    <string name="search_feeds">Search</string>
    <string name="settings">Settings</string>
    <string name="noti">Push Notifications</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="profile_heading">PROFILE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_heading">EDIT PROFILE</string>
    <string name="done">Done</string>
    <string name="select">Please Select</string>
    <string name="lawyer_heading">Lawyers</string>
    <string name="fields">Field:</string>
    <string name="profession">Profession:</string>
    <string name="experience">Experience:</string>
    <string name="view_profile">View Profile</string>
    <string name="filter_name">Filter by Name</string>
    <string name="filter_spec">Filter by Specialization</string>
    <string name="filter_exp">Filter by Experience</string>
    <string name="filter_rate">Filter by Success Rate</string>
    <string name="filter_edu">Filter by Education</string>
    <string name="lawyer_profile">LAWYERS PROFILE</string>
    <string name="spec">Specialization:</string>
    <string name="contact">Contact:</string>
    <string name="email_">Email:</string>
    <string name="aced">Academic:</string>
    <string name="award">Awards:</string>
    <string name="aff">Affiliation:</string>
    <string name="lang">Languages:</string>
    <string name="submit_case">Submit Case</string>
    <string name="case_desc">CASE DESCRIPTION</string>
    <string name="subject_case">Subject of Case</string>
    <string name="brief_desc">Brief Description of Situation</string>
    <string name="write_here...">Write here...</string>
    <string name="submit">Submit</string>
    <string name="select_type">Please select at least one type</string>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCDylplefNyWlLDoBL_n2VFjwlMWvq3sBg  </string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_underline"><u>Forgot Password</u></string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="user_name_colon">User Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="enter_text">Enter Text</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_small">Lorem Ipsum is simply dummy text of the printing and types
        setting industry. </string>
    <string name="lorem_ipsum_3_lines">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. It was popularised in the 1960s with the release of Letraset sheets. </string>
    <string name="connection_lost">No Internet Found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u><b>Sign Up</b></u></string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="mobile">Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="passwords_length_error">Password should be greater than 7 characters</string>
    <string name="enter_email_text">Enter your email address and we\'ll send  you a code to reset your password.</string>
    <string name="enter_your_new_password">Enter your new password.</string>
    <string name="don_t_get_code_yet">Didn\'t get a code yet? <b>Resend Code</b></string>
    <string name="enter_4_digit_code_here">Enter 4 digit code here.</string>
    <string name="will_be_beta">Will be implemented in beta</string>
    <string name="set_budget">Set Budget</string>
    <string name="subject_of_case">Subject of Case</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="write_here">Write here</string>
    <string name="attachment">Attachment</string>
    <string name="attach_document">Attach Document</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="lawyer_philipe_gibson"><b>Lawyer:</b> Philipe Gibson</string>
    <string name="view_detail">View Detail</string>
    <string name="view_details">View Details</string>
    <string name="tab1">New Cases</string>
    <string name="tab2">Recent Cases</string>
    <string name="my_case">My Case</string>
    <string name="payment">Payment</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="my_cases">My Cases</string>
    <string name="you_have_total_23_events">You Have Total 23 Events</string>
    <string name="create_new_event">create new event</string>
    <string name="date_time">Date &amp; Time:</string>
    <string name="edit">Edit</string>
    <string name="case_members_john_galin_cavin_brend_amp_albert_chris"><b>Case Members:</b> John Galin, Cavin Brend &amp; Albert Chris</string>
    <string name="leave_group">Leave Group</string>
    <string name="find_a_lawyer">Find a Lawyer</string>
    <string name="location">Location</string>
    <string name="library">Library</string>
    <string name="calendar">Calendar</string>
    <string name="enter_type_of_lawyer">Enter Type of Lawyer</string>
    <string name="enter_type_of_case">Enter Type of Case</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_group">Edit Group</string>
    <string name="case_details">Case Details</string>
    <string name="case_snatching_case"><b>Case:</b> Snatching case</string>
    <string name="event_meeting_scheduled"><b>Event:</b> Meeting Scheduled</string>
    <string name="set_location">Set Location</string>
    <string name="type_of_criminal">Type of Criminal</string>
    <string name="type_of_case">Type of Case</string>
    <string name="appointment">Appointment</string>
    <string name="my_messages">My Messages</string>
    <string name="newsfeeds">Newsfeeds</string>
    <string name="my_library">My Library</string>
    <string name="upload_your_resume_or_supporting_documents">Upload your Resume or supporting\ndocuments</string>
    <string name="your_profile_has_been_submitted_for_reviews">Your Profile has been submitted\nfor review.</string>
    <string name="ok">OK</string>
    <string name="phone_number">Phone Number</string>
    <string name="academics">Academics</string>
    <string name="affiliation">Affiliation</string>
    <string name="case_name">Case Name</string>
    <string name="title_agenda">Title Agenda</string>
    <string name="reminder">Reminder</string>
    <string name="create_event">Create Event</string>
    <string name="my_calendar">My Calendar</string>
    <string name="charge_payment">Charge Payment</string>
    <string name="make_payment">Make Payment</string>
    <string name="event_details">Event Details</string>
    <string name="messages">Messages</string>
    <string name="null_response">Null response found</string>
</resources>