<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/x15"
    android:paddingRight="@dimen/x15"
    android:paddingTop="@dimen/x30">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.ingic.lmslawyer.ui.views.AnyEditTextView
            android:id="@+id/txtOldPass"
            style="@style/editText_gray_style"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:textSize="@dimen/x15"
            app:emptyAllowed="false"
            app:typeface="@string/font_roboto"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/text_dark_gray">

        </View>

        <com.ingic.lmslawyer.ui.views.AnyEditTextView
            android:id="@+id/txtNewPass"
            style="@style/editText_gray_style"
            android:layout_marginTop="@dimen/x40"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:textSize="@dimen/x15"
            app:emptyAllowed="false"
            app:typeface="@string/font_roboto"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/text_dark_gray">

        </View>

        <com.ingic.lmslawyer.ui.views.AnyEditTextView
            android:id="@+id/txtConfirmPass"
            style="@style/editText_gray_style"
            android:layout_marginTop="@dimen/x40"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/x15"
            app:emptyAllowed="false"
            app:typeface="@string/font_roboto"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/text_dark_gray">

        </View>

    </LinearLayout>

    <Button
        android:id="@+id/btnChangePass"
        style="@style/maroon_rounded_button_style"
        android:layout_marginTop="@dimen/x40"
        android:text="@string/change_pass" />

    </LinearLayout>

</LinearLayout>