<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ingic.lmslawyer.fragments.login.LMSLoginFragment">

    <LinearLayout
        android:id="@+id/ll_forgotPassword_emailAndConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_50sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_30sdp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:theme="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ietFulName"
                style="@style/inputEditText"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:theme="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ietEmail"
                style="@style/inputEditText"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:theme="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ietMobile"
                style="@style/inputEditText"
                android:digits="+0123456789"
                android:hint="@string/mobile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:theme="@style/FloatingLabel"
            app:passwordToggleEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ietPassword"
                style="@style/inputEditText"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:theme="@style/FloatingLabel"
            app:passwordToggleEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ietConfirmPassword"
                style="@style/inputEditText"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            style="@style/maroon_button_style"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/sign_up" />
    </LinearLayout>

</ScrollView>
