<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.ingic.lmslawyer.fragments.forgotpassword.ForgotPasswordEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="220dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="-12dp"
                android:src="@drawable/signup_logo" />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/x40">

            <TextView
                style="@style/textview_grey_medium_bold_style"
                android:gravity="center"
                android:text="@string/forgot_password" />


            <TextView
                style="@style/textview_grey_medium_regular_style"
                android:layout_marginTop="@dimen/x20"
                android:gravity="center"
                android:text="@string/enter_email_text"
                android:textSize="@dimen/_13sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:theme="@style/FloatingLabel"
                app:passwordToggleTint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ietEmail"
                    style="@style/inputEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/maroon_button_style"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
