<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ingic.lmslawyer.fragments.forgotpassword.ForgotPasswordEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="250dip"
            android:layout_marginTop="-24dp"
            android:background="@drawable/headerimage">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="-12dp"
                android:src="@drawable/signup_logo" />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/x40">

            <TextView
                style="@style/textview_grey_medium_bold_style"
                android:text="@string/change_password" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:theme="@style/FloatingLabel"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ietOldPassword"
                    style="@style/inputEditText"
                    android:hint="@string/old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    tools:text="sdsdsdsd" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:theme="@style/FloatingLabel"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ietNewPassword"
                    style="@style/inputEditText"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    tools:text="sdsdsdsd" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:theme="@style/FloatingLabel"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ietConfirmPassword"
                    style="@style/inputEditText"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/maroon_button_style"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
